# sleepplanet

./: .gitignore  Untitled-1
.trae/rules/: project_rules.md
sleepplanet-admin/: pnpm-lock.yaml
sleepplanet-backend/: .env  Cargo.toml  README.md  appconfig.toml  config.toml  test.http
sleepplanet-backend/.sqlx/: query-0eb60f55da7d79720e4d46d0552f58544e7dca7d534b5387538e9a0f785c9179.json  query-4470f29238e05c79fcdb5228db197f69b6ab140c3394cc07731ab9dfc36e248a.json  query-44e1d29046a040898327986420d8dab7c8d08fbb618dd45ba4b91da10683f9ed.json  query-8e38e5e0f7b7655835fa3d33067cc8d1fb037d03c7a53838c2731ab70dc7fd28.json  query-99a2b3322df54e9b7f69eb93b7eb24f61ed91e1585f4f03fec586fbec8f0f65a.json  query-d132c08411266be62ea9ba5cacc0c590ec74f503ab500a4ebf1010ba50adf38b.json  query-f264873e6c98b960a40939b20605bbcb5159922f8d304b6799e3af086cc4cf24.json
sleepplanet-backend/migrations/: 20250617065249_sys_admin.down.sql  20250617065249_sys_admin.up.sql  20250617081212_add_role_permission_tables.down.sql  20250617081212_add_role_permission_tables.up.sql
sleepplanet-backend/src/: main.rs
sleepplanet-backend/src/config/: bd_config.rs  log_config.rs  mod.rs
sleepplanet-backend/src/controller/: mod.rs  sys_admin.rs
sleepplanet-backend/src/db/: mod.rs
sleepplanet-backend/src/routes/: mod.rs  sys_admin.rs
sleepplanet-backend/src/routes/sys_admin/: mod.rs
sleepplanet-backend/src/utils/: api_response.rs  error.rs  jwt.rs  mod.rs  validation.rs
sleepplanet-backend/tests/: sys_admin.http
