[package]
name = "sleepplanet-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
dotenvy = "0.15.7"
figment = { version = "0.10.19", features = ["env", "toml"] }
jsonwebtoken = "9.3.1"
salvo = { version = "0.79.0", features = ["full"] }
serde = "1.0.219"
sqlx = { version = "0.8.6", features = ["runtime-async-std", "postgres"] }
tokio = { version = "1.45.1", features = ["macros", "signal"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = {version = "0.3.19",features = ["std", "fmt", "env-filter", "tracing-log", "time", "local-time", "json"]}
ulid = "1.2.1"
validator = { version = "0.20.0", features = ["derive"] }
