[package]
name = "sleepplanet-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bcrypt = "0.17.0"
chrono = "0.4.41"
dotenvy = "0.15.7"
figment = { version = "0.10.19", features = ["env", "toml"] }
jsonwebtoken = "9.3.1"
salvo = { version = "0.79.0", features = ["full", "jwt-auth"] }
serde = "1.0.219"
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "chrono",
    "derive",
    "time",
] }

thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["macros", "signal"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = [
    "std",
    "fmt",
    "env-filter",
    "tracing-log",
    "time",
    "local-time",
    "json",
] }
ulid = "1.2.1"
validator = { version = "0.20.0", features = ["derive"] }

[dev-dependencies]
# 移除主 crate 的 postgres 特性，使用独立模块
testcontainers = "0.24"
testcontainers-modules = { version = "0.12.1", features = [
    "postgres",
    "serde_json",
] }

[package.metadata.sqlx]
database-url = { env = "DATABASE_URL" }  # 开发环境使用此 URL 验证查询